# loadbearing_wall

./: pyproject.toml  tempfile.json
src/loadbearing_wall/: __init__.py  geom_ops.py  linear_reactions.py  wall_model.py
tests/: test_geom.py  test_wall_model.py
