[project]
name = "loadbearing-wall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor Ferster", email = "connorferster@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "load-distribution>=0.1.0",
]

[project.scripts]
loadbearing-wall = "loadbearing_wall:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
]
